# pandora13-wifi-controller

./: Cargo.toml  README.md  perfboard_design.xopp  test-script
pandora13-wifi-controller_pcb/: pandora13-wifi-controller_pcb.kicad_pcb  pandora13-wifi-controller_pcb.kicad_prl  pandora13-wifi-controller_pcb.kicad_pro  pandora13-wifi-controller_pcb.kicad_sch
src/: controller.rs  main.rs  virtual_keyboard_matrix.rs
